api-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  namespace: default
  name: api
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      name: api
      labels:
        name: api
    spec:
      containers:
      - image: gcr.io/sample-gke-api/api:latest
        name: api
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /
            port: 8081
        readinessProbe:
          httpGet:
            path: /
            port: 8081
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
          limits:
            cpu: 40m
            memory: 128Mi
        ports:
        - containerPort: 8081
          name: http
      - image: gcr.io/endpoints-release/endpoints-runtime:1.5
        name: esp
        args: [
          "-p", "8080",
          "-a", "0.0.0.0:8081",
          "-s", "api.endpoints.sample-gke-api.cloud.goog",
          "-v", "<your-endpoints-service-deploy-id>",
        ]
        resources:
          requests:
            cpu: 20m
            memory: 32Mi
          limits:
            cpu: 40m
            memory: 64Mi
        ports:
          - containerPort: 8080
